--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/app.js",
+      "src": "app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "routes/(.*)",
+      "dest": "app.js",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
     }
   ]
 }
